Added AWS support for airflow.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,9 @@ x-airflow-common:
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKEND: 'airflow.api.auth.backend.basic_auth'
     AIRFLOW_CONN_POSTGRES_DEFAULT: postgres://airflow:airflow@postgres:5432/airflow
+    AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+    AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+    AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION}
     WAREHOUSE_USER: ${POSTGRES_USER}
     WAREHOUSE_PASSWORD: ${POSTGRES_PASSWORD}
     WAREHOUSE_DB: ${POSTGRES_DB}
