--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,14 +50,11 @@ x-airflow-common:
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKEND: 'airflow.api.auth.backend.basic_auth'
     AIRFLOW_CONN_POSTGRES_DEFAULT: postgres://airflow:airflow@postgres:5432/airflow
-    AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-    AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-    AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION}
-    WAREHOUSE_USER: ${POSTGRES_USER}
-    WAREHOUSE_PASSWORD: ${POSTGRES_PASSWORD}
-    WAREHOUSE_DB: ${POSTGRES_DB}
-    WAREHOUSE_HOST: ${POSTGRES_HOST}
-    WARREHOUSE_PORT: ${POSTGRES_PORT}
+    WAREHOUSE_USER: ${WAREHOUSE_USER}
+    WAREHOUSE_PASSWORD: ${WAREHOUSE_PASSWORD}
+    WAREHOUSE_DB: ${WAREHOUSE_DB}
+    WAREHOUSE_HOST: ${WAREHOUSE_HOST}
+    WARREHOUSE_PORT: ${WAREHOUSE_PORT}
 
   volumes:
     - ./dags:/opt/airflow/dags
@@ -136,11 +133,11 @@ services:
     image: postgres:13
     container_name: warehouse
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${WAREHOUSE_USER}
+      POSTGRES_PASSWORD: ${WAREHOUSE_PASSWORD}
+      POSTGRES_DB: ${WAREHOUSE_DB}
     healthcheck:
-      test: [ "CMD", "pg_isready", "-U", "${POSTGRES_USER}" ]
+      test: [ "CMD", "pg_isready", "-U", "${WAREHOUSE_USER}" ]
       interval: 5s
       retries: 5
     restart: always
