Finish ETL, just pending the documentation of the code and data modelling definition.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,8 @@ x-airflow-common:
     WAREHOUSE_PASSWORD: ${WAREHOUSE_PASSWORD}
     WAREHOUSE_DB: ${WAREHOUSE_DB}
     WAREHOUSE_HOST: ${WAREHOUSE_HOST}
-    WARREHOUSE_PORT: ${WAREHOUSE_PORT}
+    WAREHOUSE_PORT: ${WAREHOUSE_PORT}
+    BUCKET_NAME: ${BUCKET_NAME}
 
   volumes:
     - ./dags:/opt/airflow/dags
